Thu Mar 07 00:40:20 GMT 2013  Olly Betts <olly@survex.com>

	* jsonescape.cc: Fix C+11 compatibility issue highlighted by GCC
	  warning.

Wed Mar 06 03:35:43 GMT 2013  Olly Betts <olly@survex.com>

	* gen-myhtmltags,myhtmlparse.cc: Distinguish page breaks from other
	  whitespace in samples.

Tue Mar 05 19:37:55 GMT 2013  Olly Betts <olly@survex.com>

	* INSTALL,configure.ac: Provide hints as to what package to install
	  for magic.h.

Mon Mar 04 03:56:22 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac,omindex.cc,runfilter.cc,runfilter.h: If omindex
	  receives a SIGHUP, SIGINT, SIGQUIT or SIGTERM, then kill any active
	  external filter child process before handling the signal as we
	  otherwise would.

Sun Mar 03 23:52:37 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac,runfilter.cc: If setpgid() is available, put each
	  external filter in its own process group so we can easily kill it
	  along with any processes which it starts.

Mon Feb 25 19:03:06 GMT 2013  Olly Betts <olly@survex.com>

	* docs/overview.rst: Update to add com to the list of ignored
	  extensions.

Thu Feb 21 22:09:44 GMT 2013  Olly Betts <olly@survex.com>

	* omindex.cc: Ignore .com files by default.

Tue Feb 19 04:19:50 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Tue Feb 19 03:13:08 GMT 2013  Olly Betts <olly@survex.com>

	* htmlparsetest.cc,myhtmlparse.cc,myhtmlparse.h: Sample from HTML now
	  contains \n where a line or paragraph break would appear, and \t
	  between table cells.

Tue Feb 19 03:02:58 GMT 2013  Olly Betts <olly@survex.com>

	* gen-myhtmltags,htmlparsetest.cc,myhtmlparse.cc,myhtmlparse.tokens:
	  Generate a lookup table for where we should insert a space in place
	  of an HTML tag rather than using a switch statement for that.

Tue Feb 12 20:43:14 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am: Remove my-html-tok.h in "make clean" not "make
	  distclean", since it's built by "make" and that's what the automake